# js_todo_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.js
public/: index.html  script.js  style.css
server/: server.js
server/models/: Category.js  Todo.js
server/routes/: categories.js  todos.js
server_rust/: .dockerignore  Cargo.toml  Dockerfile
server_rust/src/: db.rs  main.rs  models.rs  routes.rs
