[package]
name = "server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-sync"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.8.2"
futures = "0.3"
thiserror = "1.0"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"

[[bin]]
name = "server_rust"
path = "src/main.rs"